# med_bot

./: .gitignore  README.md  pyproject.toml  setup.cfg
app/: .env.example  Dockerfile  chainlit.py  docker-compose.yml  requirements.txt
notebooks/: EDA.ipynb  research_llm_candidates.ipynb
notebooks/mlflow_artifacts/: medqa_lora_phi_predictions.csv  medqa_lora_predictions.csv  unsloth_Meta-Llama-3_1-8B-Instruct-bnb-4bit_predictions.csv  unsloth_Phi-3_5-mini-instruct_predictions.csv
scripts/: finetune.py  prepare_dataset.py  setup_vbd.py
