[project]
name = "med-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "flakoash",email = "adrian.rojas@factored.ai"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^9.4.0"
ipykernel = "^6.29.5"
spacy = "^3.8.7"

