[project]
name = "med-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "flakoash",email = "adrian.rojas@factored.ai"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "vllm[serving] (>=0.9.2,<0.10.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "chainlit (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^9.4.0"
ipykernel = "^6.29.5"
spacy = "^3.8.7"
black = "^25.1.0"
datasets = "^4.0.0"
peft = "^0.16.0"
accelerate = "^1.8.1"
transformers = "^4.53.1"
torch = "^2.7.0"
evaluate = "^0.4.4"
bert-score = "^0.3.13"
rouge-score = "^0.1.2"
nltk = "^3.9.1"
mlflow = "^3.1.1"
ruff = "^0.12.2"
flake8 = "^7.3.0"

[tool.ruff]
exclude = [
    "**/*.ipynb"
]